# onlook

./: .env.local  .gitignore  PROGRESS.md  README.md  ROADMAP.md  TECHSTACK.md  VISION.md  bun.lockb  package.json  tsconfig.base.json
apps/backend/: .gitignore  README.md  mix.exs
apps/backend/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
apps/backend/lib/: onlook_backend.ex  onlook_backend_web.ex
apps/backend/lib/onlook_backend/: ai.ex  application.ex  repo.ex  studio.ex
apps/backend/lib/onlook_backend_web/: endpoint.ex  gettext.ex  presence.ex  (+4 more)
apps/backend/test/: test_helper.exs
apps/desktop/: package.json
apps/desktop/sidecar/: index.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/editor-dist-placeholder/: index.html
apps/desktop/src-tauri/src/: dev_server.rs  error.rs  files.rs  lib.rs  main.rs  preview.rs  preview_probe.js  projects.rs  sidecar.rs
apps/editor/: index.html  package.json  tsconfig.json
apps/editor/src/: App.tsx  FileTree.tsx  StatusBanner.tsx  engine.ts  index.css  vite-env.d.ts
apps/react-host/: index.html  package.json  tsconfig.json  vite.config.ts
apps/react-host/src/: App.tsx  index.css  main.tsx
apps/studio/: index.html  package.json  tsconfig.json  vite.config.ts
apps/studio/src/: App.svelte  app.css  vite-env.d.ts
openspec/changes/add-desktop-file-tree/: design.md  proposal.md  tasks.md
openspec/changes/add-desktop-shell/: design.md  engine-api-surface.md  preview-surface-notes.md  proposal.md  tasks.md
(+23 files in other folders)
