[package]
name = "onlook-desktop"
version = "0.0.0"
description = "Onlook Next desktop shell"
authors = ["Onlook"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "onlook_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "onlook-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
thiserror = "1"
once_cell = "1"
url = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
